--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to the Tasklists</h1>
 
 <a href="tasks">Tasklists</a>
-<a href="#">Signup</a>
+<a href="signup">Signup</a>
 <a href="#">Login</a>
 
