kadai-tasklist rev

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,12 @@
-<ul>
-  <li><%= link_to 'Tasklist', tasks_path %></li>
-  <li><%= link_to 'Signup', signup_path %></li>
-  <li><%= link_to 'Login', login_path %></li>
-  <li><%= link_to 'Logout', logout_path, method: :delete %></li>
-</ul>
+<% if logged_in? %>
+  <ul>
+    <li><%= link_to 'Tasklist', tasks_path %></li>
+    <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+  </ul>
+<% else %>
+  <ul>
+    <li><%= link_to 'Tasklist', tasks_path %></li>
+    <li><%= link_to 'Signup', signup_path %></li>
+    <li><%= link_to 'Login', login_path %></li>
+  </ul>
+<% end %>
